--- a/BF_original.ipynb
+++ b/BF_original.ipynb
@@ -7,6 +7,7 @@
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -288,9 +289,10 @@
         "model.add(layers.MaxPooling2D((2, 2)))\n",
         "model.add(layers.Conv2D(64, (3, 3), activation='relu'))\n",
         "model.add(layers.BatchNormalization())\n",
+        "model.add(layers.MaxPooling2D((2, 2)))\n",
         "model.add(layers.Flatten())\n",
-        "model.add(layers.Dense(64, activation='relu'))\n",
         "model.add(layers.Dropout(.5))\n",
+        "model.add(layers.Dense(64, activation='relu'))\n",
         "model.add(layers.Dense(6, activation='softmax'))"
       ],
       "execution_count": 0,
@@ -305,6 +307,20 @@
       },
       "source": [
         "model.summary()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "O4c6RwO0fOjb",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Setup checkpoint callback - will save the model after each epoch if validation loss is lower than the previous checkpoint\n",
+        "checkpoint = tf.keras.callbacks.ModelCheckpoint('./', save_best_only=True)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -328,7 +344,8 @@
         "# Training the data and validating with test data\n",
         "history = model.fit(\n",
         "        train_data_gen,\n",
-        "        epochs=10,\n",
+        "        epochs=25,\n",
+        "        callbacks=[checkpoint],\n",
         "        validation_data=test_data_gen)\n"
       ],
       "execution_count": 0,
@@ -366,6 +383,46 @@
       "source": [
         "print(sum(history.history['val_accuracy'])/10)\n",
         "print(sum(history.history['accuracy'])/10)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YtUOsvvDYBgr",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import base64\n",
+        "\n",
+        "def save_model_signed(model, path):\n",
+        "    @tf.function(input_signature=[tf.TensorSpec(shape=[None, ], dtype=tf.string)])\n",
+        "    def preprocess_and_evaluate(b64_img):\n",
+        "        img = tf.image.decode_image(b64_img[0], dtype=tf.uint8)\n",
+        "        img.set_shape((None, None, 3))\n",
+        "        img = tf.image.resize(img, [128, 128])\n",
+        "        img = tf.reshape(img, (-1, 128, 128, 3))\n",
+        "        img = tf.cast(img, dtype=tf.float32) / 255\n",
+        "\n",
+        "\n",
+        "        return model(img)\n",
+        "    \n",
+        "    tf.saved_model.save(model, path, signatures=preprocess_and_evaluate)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QqDoMpPyaoHq",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "save_model_signed(model,'assets')"
       ],
       "execution_count": 0,
       "outputs": []
