Model now saves locally

--- a/BF_original.ipynb
+++ b/BF_original.ipynb
@@ -338,9 +338,6 @@
         "              loss='sparse_categorical_crossentropy',\n",
         "              metrics=['accuracy'])\n",
         "\n",
-        "#logdir = os.path.join(\"logs\", datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\"))\n",
-        "#tensorboard_callback = tf.keras.callbacks.TensorBoard(logdir, histogram_freq=1)\n",
-        "\n",
         "# Training the data and validating with test data\n",
         "history = model.fit(\n",
         "        train_data_gen,\n",
@@ -367,22 +364,7 @@
         "plt.ylim([0.1, 1])\n",
         "plt.legend(loc='lower right')\n",
         "\n",
-        "test_loss, test_acc = model.evaluate(test_data_gen, verbose=2)\n",
-        "\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Zkt-w_rmn5z7",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "print(sum(history.history['val_accuracy'])/10)\n",
-        "print(sum(history.history['accuracy'])/10)"
+        "test_loss, test_acc = model.evaluate(test_data_gen, verbose=2)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -422,37 +404,7 @@
         "colab": {}
       },
       "source": [
-        "save_model_signed(model,'assets')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "RguzXfQ87kJO",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "\n",
-        "# Load the TensorBoard notebook extension\n",
-        "%load_ext tensorboard\n",
-        "%tensorboard --logdir logs"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Kf38pXpo6v8Z",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from tensorboard import notebook\n",
-        "notebook.list() # View open TensorBoard instances"
+        "save_model_signed(model,'')"
       ],
       "execution_count": 0,
       "outputs": []
